[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/GameTemplate/GUI/Menus/Options/Game.gd" type="Script" id=2]
[ext_resource path="res://addons/GameTemplate/GUI/Buttons/ToggleButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/GameTemplate/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=6]

[node name="Game" type="VBoxContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
custom_constants/separation = 1
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 304.0
margin_bottom = 138.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameLabel" type="Label" parent="Panel/VBoxContainer"]
margin_right = 304.0
margin_bottom = 23.0
size_flags_horizontal = 5
size_flags_vertical = 1
text = "Game"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 27.0
margin_right = 304.0
margin_bottom = 27.0

[node name="LeftPanel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer"]
margin_left = 13.0
margin_top = 34.0
margin_right = 137.0
margin_bottom = 59.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 25.0
size_flags_horizontal = 5
size_flags_vertical = 1
text = "Difficulty"
align = 1

[node name="DifficultySelect" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 124.0
margin_bottom = 25.0
text = "Hard"

[node name="RightPanel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="Control2" type="Control" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_left = 8.0
margin_top = 9.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Blood" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 134.0
text = "Blood / Gore"

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_left = 8.0
margin_top = 65.0
margin_right = 141.0
margin_bottom = 88.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Pacific" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
margin_right = 133.0
text = "Pacific Mode"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 31.0
margin_right = 304.0
margin_bottom = 138.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 5
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 300.0
margin_bottom = 103.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 139.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 133.0
margin_right = 170.0
margin_bottom = 25.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Back" parent="MarginContainer/VBoxContainer" groups=["Game"] instance=ExtResource( 6 )]
margin_right = 37.0
margin_bottom = 25.0
text = "Back"

[connection signal="item_selected" from="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer/DifficultySelect" to="." method="_on_DifficultySelect_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer/Blood" to="." method="_on_Blood_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer2/Pacific" to="." method="_on_Pacific_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
